<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unicap</string>
    <string name="unicap_full_name">Universidade Católica de Pernambuco</string>
    <string name="navigation_drawer_open">Abrir navegação</string>
    <string name="navigation_drawer_close">Fechar navegação</string>
    <string name="logout">Sair</string>
    <string name="dashboard">Painel</string>
    <string name="picture">Foto</string>
    <string name="subjects">Disciplinas</string>
    <string name="calendar">Calendário</string>
    <string name="grades">Notas</string>
    <string name="lessons">Aulas</string>
    <string name="help">Ajuda</string>
    <string name="settings">Configurações</string>
    <string name="feedback">Feedback</string>
    <string name="sync">Sincronizar</string>
    <string name="synchronizing">Sincronizando</string>
    <string name="registration">Matrícula</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="past">Cursadas</string>
    <string name="actual">Cursando</string>
    <string name="pending">Pendentes</string>

    <!-- Error messages -->
    <string name="error_generic_message">Ops… Algo deu errado :/</string>
    <string name="error_auth_needed">Usuário não autenticado.</string>
    <string name="error_maintenance">Portal em manutenção.</string>
    <string name="error_invalid_registration">Matrícula inválida</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="error_incorrect_registration">Matrícula incorreta.</string>
    <string name="error_incorrect_password">Senha incorreta.</string>
    <string name="error_max_tries_exceeded">Limite de tentativas excedido.</string>
    <string name="error_connection_failed">Impossível estabelecer a conexão.</string>

    <!-- Progress messages -->
    <string name="progress_1">Autenticando…</string>
    <string name="progress_2">Sincronizando dados pessoais…</string>
    <string name="progress_3">Sincronizando disciplinas cursadas…</string>
    <string name="progress_4">Sincronizando disciplinas do período…</string>
    <string name="progress_5">Sincronizando disciplinas a cursar…</string>
    <string name="progress_6">Sincronizando calendário…</string>
    <string name="progress_7">Sincronizando notas…</string>
    <string name="progress_8">Sincronização concluída.</string>

    <!-- Weekdays -->
    <string name="sun_letter">S</string>
    <string name="mon_letter">S</string>
    <string name="tue_letter">T</string>
    <string name="wed_letter">Q</string>
    <string name="thu_letter">Q</string>
    <string name="fri_letter">S</string>
    <string name="sat_letter">S</string>
    <string name="today">Hoje</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thusday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="saturday">Sábado</string>

    <!-- Formats -->
    <string name="welcome_format">Bem vindo(a), %s.</string>
    <string name="period_format">%dº Período</string>
    <string name="workload_format">%d Horas</string>
    <string name="credits_format">%d Créditos</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="hour_format">HH:mm</string>

    <string name="rta_dialog_cancel">Mais tarde</string>
    <string name="rta_dialog_message">Gosta da aplicação? Então não se importaria de a avaliar? Não demora mais do que um minuto. Obrigado pelo seu apoio!</string>
    <string name="rta_dialog_no">Não, Obrigado</string>
    <string name="rta_dialog_ok">Avaliar agora</string>
    <string name="rta_dialog_title">Avaliar a aplicação</string>

    <string name="general_information">Informações Gerais</string>
    <string name="code">Código</string>
    <string name="workload">Carga Horária</string>
    <string name="credits">Créditos</string>
    <string name="period">Período</string>
    <string name="unavailable">Indisponível</string>
    <string name="approved">Aprovado</string>
    <string name="repproved">Reprovado</string>
    <string name="unknown">Desconhecido</string>
    <string name="imported">Importada</string>
    <string name="subject_history">Histórico da Disciplina</string>
    <string name="evaluations">Avaliações</string>
    <string name="final_degree">Exame Final</string>
    <string name="second_degree">2º GQ</string>
    <string name="first_degree">1º GQ</string>
    <string name="situation">Situação</string>
    <string name="performance_coefficient">Coeficiente de Rendimento</string>
    <string name="course">Curso</string>
    <string name="average">Média</string>
    <string name="waiting">Aguardando</string>
    <string name="waiting_final">Aguardando Final</string>
    <string name="final_average">Média Final</string>
    <string name="evolution">Evolução</string>
    <string name="about">Sobre</string>
    <string name="first_call">1ª chamada</string>
    <string name="second_call">2ª chamada</string>
    <string name="about_description">O aplicativo Unicap permite que você acesse as informações presentes no portal do aluno de graduação da Universidade Católica de Pernambuco.</string>
    <string name="about_warranty">Todo o desenvolvimento foi feito de maneira independente e não possui nenhum vínculo com a instituição.</string>
    <string name="about_version">Versão 1.2.6</string>
    <string name="offline_message">Você está offline</string>
    <string name="generic_error">Ops… Algo deu errado.</string>
    <string name="unicap_preferences">Preferências Unicap</string>
    <string name="debug_logs">Debugar Logs</string>
    <string name="debug_logs_summary">Mostrar logs de debug no LogCat</string>
    <string name="first_degree_available">Primeiro GQ disponível</string>
    <string name="second_degree_available">Segundo GQ disponível</string>
    <string name="final_degree_available">Avaliação final disponível</string>
    <string name="feedback_title">Sua opinião é importante.</string>
    <string name="feedback_description">Entre em contato conosco para sugestões, críticas ou elogios através do email unicap.app@gmail.com</string>
    <string name="feedback_testers">Interessado em se tornar um testador e receber atualizações antes da maioria? Entre na comunidade de testadores e siga as instruções: http://goo.gl/L0clQo</string>
    <string name="empty_calendar_error">Nenhuma data foi definida.</string>
    <string name="performed">Cumprido</string>
    <string name="gravatar_text">Tentando alterar ou adicionar sua foto? Nós utilizamos o serviço Gravatar para facilitar sua vida.</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="learn_more">Saiba mais</string>
    <string name="not_now">Agora não</string>
    <string name="gravatar_website">http://br.gravatar.com/</string>
    <string name="dispensed">Dispensado</string>
    <string name="rest">Descanso</string>
    <string name="begin">Início</string>
    <string name="location">Local</string>
    <string name="end">Fim</string>
    <string name="add_account">Adicionar conta</string>
    <string name="warning_multiple_account">A funcionalidade de múltiplas contas está em desenvolvimento.</string>

</resources>
