<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/card_subject_schedule_mon"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:background="@color/unicap_really_light_gray"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:text="@string/mon_letter"/>
    <TextView
        android:id="@+id/card_subject_schedule_tue"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:background="@color/unicap_really_light_gray"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:text="@string/tue_letter"/>
    <TextView
        android:id="@+id/card_subject_schedule_wed"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:background="@color/unicap_really_light_gray"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:text="@string/wed_letter"/>
    <TextView
        android:id="@+id/card_subject_schedule_thu"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:background="@color/unicap_really_light_gray"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:text="@string/thu_letter"/>
    <TextView
        android:id="@+id/card_subject_schedule_fri"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:background="@color/unicap_really_light_gray"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:text="@string/fri_letter"/>
    <TextView
        android:id="@+id/card_subject_schedule_sat"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:background="@color/unicap_really_light_gray"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:text="@string/sat_letter"/>

</LinearLayout>