<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/margin_normal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/cardTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="23sp"
        android:text="@string/situation"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_access_time_grey600_24dp"
                android:text="@string/waiting"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_green_light"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_check_grey600_24dp"
                android:text="@string/approved"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_light"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_close_grey600_24dp"
                android:text="@string/repproved"/>

        </LinearLayout>

        <lecho.lib.hellocharts.view.PieChartView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/graph"/>

    </LinearLayout>

</LinearLayout>