<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.thm.unicap.app.auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/registration_login_form"
                android:padding="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:src="@drawable/ic_unicap_with_text"
                    android:contentDescription="@string/unicap_full_name" />

                <EditText
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:singleLine="true"/>

                <com.dd.CircularProgressButton
                    android:id="@+id/registration_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cpb_selectorComplete="@color/unicap_base"
                    app:cpb_selectorError="@color/unicap_base"
                    app:cpb_selectorIdle="@color/unicap_base"
                    app:cpb_colorIndicator="@color/unicap_base"
                    app:cpb_textComplete="@string/sign_in"
                    app:cpb_textError="@string/sign_in"
                    app:cpb_textIdle="@string/sign_in" />

            </LinearLayout>
    </ScrollView>

</LinearLayout>



