<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/unicap_gray_level_1">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_normal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:src="@drawable/ic_unicap"
            android:contentDescription="@string/app_name" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:typeface="roboto_regular"
            android:textColor="@color/unicap_gray_level_4"
            android:textSize="18sp"
            android:text="@string/about_version"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            app:typeface="roboto_thin"
            android:textSize="18sp"
            android:text="@string/about_copyright"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/unicap_gray_level_2" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="center_horizontal"
            app:typeface="roboto_thin"
            android:textColor="@color/unicap_gray_level_4"
            android:textSize="18sp"
            android:text="@string/about_description"/>

    </LinearLayout>

</ScrollView>