<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/margin_normal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/cardTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="23sp"
        android:text="@string/general_information"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_vpn_key_grey600_24dp"
            android:text="@string/code"/>

        <TextView
            android:id="@+id/card_subject_info_code"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="INF6542"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unicap_gray_level_1"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_access_time_grey600_24dp"
            android:text="@string/workload"/>

        <TextView
            android:id="@+id/card_subject_info_workload"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="60 Horas"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unicap_gray_level_1"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_local_play_grey600_24dp"
            android:text="@string/credits"/>

        <TextView
            android:id="@+id/card_subject_info_credits"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="4 Créditos"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unicap_gray_level_1"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_event_grey600_24dp"
            android:text="@string/period"/>

        <TextView
            android:id="@+id/card_subject_info_period"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="6º Período"/>

    </RelativeLayout>

</LinearLayout>